--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = cities[]\n",
+    "los_cabos_pop = cities[4]['Population']\n",
     "los_cabos_pop # 287651"
    ]
   },
